---
source: src/ast_tests.rs
expression: f

---
name: main
args: []
ret: ~
body:
  - If:
      - Var: x
      - - Expr:
            Var: xf
        - Let:
            - z
            - Var: d
      - - Expr:
            Var: noo
  - Print:
      Var: hell

